----------------------------------------------------------------
mirt 0.4.0
----------------------------------------------------------------

* Added itemfit() and personfit() functions for uni and multidimensional models. Within itemfit
  empirical response curves can also be plotted for unidimensional models

* Wrapped itemplot() and fscores() into S3 function for better documentation   

* Added free.start list option for all estimation functions. Allows a quicker way to 
  specify free and fixed parameters

* Added iteminfo() and extract.item() to calculate the item information and extract 
  desired items

* Multiple group estimation available with the multipleGroup() function. Uses the EM and MHRM
  as the estimation engines, with the EM as default. The MHRM seems to be faster at two factors+
  though and naturally should be more accurate, therefore it is set as the default

* wald() function added for testing linear constraints. Useful in situations
  for testing sets of parameters rather than estimating a new model for a likelihood ratio test

* Methods that use the MHRM can now estimate the nominal, gpcm, mcm, and 4PL models

* fscores computable for multiple group objects and in general play nicer with missing data
  (reported by Judith Conijn). Also, using the options full.scores = TRUE has been optimized
  with Rcpp

* Oblique rotation bug fix for fscores and coef (reported by Pedro A. Barbetta)  

* Added the item probability functions in the ?mirt documentation for reference

* General bug fixes as usual that were spawned from all the added features 

----------------------------------------------------------------
mirt 0.3.1
----------------------------------------------------------------

* Individual classes now correspond to the type of methods: ExploratoryClass, 
  ConfirmatoryClass, and MultipleGroupClass

* plot and itemplot now works for confmirt objects
