@@ -1,1 +1,3 @@
 .gitignore
+ToDo
+COPYING
