@@ -5,7 +5,8 @@ mirt 0.4.0
 * Added itemfit() and personfit() functions for uni and multidimensional models. Within itemfit
   empirical response curves can also be plotted for unidimensional models
 
-* Wrapped itemplot() and fscores() into S3 function for better documentation   
+* Wrapped itemplot() and fscores() into S3 function for better documentation. Also response curve
+  now are all contained in individual plots
 
 * Added free.start list option for all estimation functions. Allows a quicker way to 
   specify free and fixed parameters
